# my_platform

./: .gitignore  CMakeLists.txt  README.md  test  test.txt
app/cpp_relearn/: CMakeLists.txt
app/cpp_relearn/includes/: Sales_item.h
app/cpp_relearn/src/: main.cpp
app/test/: CMakeLists.txt
app/test/src/: main.c  main.cpp
components/cJSON/: CMakeLists.txt
components/list_template_c/: CMakeLists.txt
components/list_template_c/includes/: dataManager.h  list_x.h  mdefine.h  xlist.h
components/list_template_c/src/: dataManager.c90  list_x.c  xlist.c
components/makefile_learnning/: Kconfig  Makefile  README.md  aa.c  gcc_help  make_help
components/makefile_learnning/lib/tutorial_dynamic_link_library/: Makefile  SoTest.cpp  SoTest.h
components/makefile_learnning/lib/tutorial_static_link_library/: ATest.cpp  ATest.h  Makefile
components/makefile_learnning/src/main/: main.cpp  test.cpp
components/makefile_learnning/src/others/: add.cpp  sub.h
components/my_printf/: my_printf.c  my_printf.h
components/ring_x_queue/: ring_x_queue.h
components/test/: CMakeLists.txt
components/test/includes/: test.h
components/test/src/: test.c
components/xui/: CMakeLists.txt
components/xui/includes/: xui.h  xui_config.h
components/xui/src/: xui.c  xui_tick.c  xui_tick.h
